# Aspyre-Engine

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
branding/: Aspyre Logo.psd
core/: types.hxx  vulkaninstance.hxx
core/ecs/: entity.cxx  entity.hxx  guid.cxx  guid.hxx
core/logging/: log.hxx
core/rendering/: vulkaninstance.cxx  vulkaninstance.hxx  vulkanwindow.cxx  vulkanwindow.hxx  vulkanwindowrenderer.cxx  vulkanwindowrenderer.hxx
core/rendering/graphics/: shader.cxx  shader.hxx  vulkanmainrenderer.cxx  vulkanmainrenderer.hxx
core/rendering/graphics/2D/: vulkan2d.cxx  vulkan2d.hxx
core/rendering/graphics/3D/: vulkan3d.cxx  vulkan3d.hxx
core/scene/: scene.cxx  scene.hxx
editor/: editor_mainwindow.cxx  mainwindow.cxx  mainwindow.hxx
main/: main.cxx
release/lib/: 2dplugin.lib  3dplugin.lib  ecsplugin.lib  editorplugin.lib  sceneplugin.lib  vulkanplugin.lib
win64/: 2dplugin.vcxproj  2dplugin.vcxproj.filters  3dplugin.vcxproj  3dplugin.vcxproj.filters  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Aspyre Engine.sln  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  aspyre.vcxproj  aspyre.vcxproj.filters  cmake_install.cmake  coreplugin.vcxproj  coreplugin.vcxproj.filters  ecsplugin.vcxproj  ecsplugin.vcxproj.filters  editorplugin.vcxproj  editorplugin.vcxproj.filters  graphicsplugin.vcxproj  graphicsplugin.vcxproj.filters  sceneplugin.vcxproj  sceneplugin.vcxproj.filters  vulkanplugin.vcxproj  vulkanplugin.vcxproj.filters
x11/: CMakeCache.txt  Makefile  aspyre  cmake_install.cmake  install_manifest.txt
x11/2dplugin_autogen/: moc_predefs.h
x11/3dplugin_autogen/: moc_predefs.h
x11/editorplugin_autogen/: moc_predefs.h
x11/editorplugin_autogen/3HAKN7MTYQ/: moc_mainwindow.cpp
x11/graphicsplugin_autogen/: moc_predefs.h
x11/vulkanplugin_autogen/: moc_predefs.h
x11/x64/lib/: libqtadvanceddocking.so.3.7.1
